--- a/p8105_hw2_lk2776.Rmd
+++ b/p8105_hw2_lk2776.Rmd
@@ -3,4 +3,30 @@ title: "p8105_hw2_lk2776"
 output: github_document
 date: "2024-09-30"
 ---
+## hw2
+
+```{r setup, warning=FALSE, message=FALSE}
+library(tidyverse)
+options(tibble.print_min=5)
+```
+
+problem1:
+
+Read and clean the data; retain line, station, name, station latitude / longitude, routes served, entry, vending, entrance type, and ADA compliance. Convert the entry variable from character (YES vs NO) to a logical variable (the ifelse or case_match function may be useful).
+
+
+```{r study data}
+#read data using read_csv() from tidyverse
+nyc_data = read_csv("./data/NYC_Transit_Subway_Entrance_And_Exit_Data.csv", 
+                    na=c("NA",".",""), 
+                    col_names=TRUE) |>
+  janitor::clean_names() |> 
+  select(line,station_name,station_latitude,station_longitude,
+         route1,route2,route3,route4,route5,
+         route6,route7,route8,route9,route10,route11,
+         entry,vending,entrance_type,ada
+         ) 
+  
+head(nyc_data)
+```
 
