--- a/p8105_hw2_lk2776.md
+++ b/p8105_hw2_lk2776.md
@@ -2,3 +2,59 @@ p8105_hw2_lk2776
 ================
 2024-09-30
 
+## hw2
+
+``` r
+#load packages; print 3 lines of tibble output
+library(tidyverse)
+options(tibble.print_min=5)
+```
+
+problem1:
+
+Read and clean the data; retain line, station, name, station latitude /
+longitude, routes served, entry, vending, entrance type, and ADA
+compliance. Convert the entry variable from character (YES vs NO) to a
+logical variable (the ifelse or case_match function may be useful).
+
+``` r
+#read data using read_csv() from tidyverse
+nyc_data = read_csv("./data/NYC_Transit_Subway_Entrance_And_Exit_Data.csv", 
+                    na=c("NA",".",""), 
+                    col_names=TRUE) |>
+  janitor::clean_names() |> 
+  select(line,station_name,station_latitude,station_longitude,
+         route1,route2,route3,route4,route5,
+         route6,route7,route8,route9,route10,route11,
+         entry,vending,entrance_type,ada
+         ) 
+```
+
+    ## Rows: 1868 Columns: 32
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## chr (22): Division, Line, Station Name, Route1, Route2, Route3, Route4, Rout...
+    ## dbl  (8): Station Latitude, Station Longitude, Route8, Route9, Route10, Rout...
+    ## lgl  (2): ADA, Free Crossover
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+``` r
+  #mutate(entry=if_else(is.na(entry),FALSE,TRUE))
+  
+head(nyc_data)
+```
+
+    ## # A tibble: 6 × 19
+    ##   line     station_name station_latitude station_longitude route1 route2 route3
+    ##   <chr>    <chr>                   <dbl>             <dbl> <chr>  <chr>  <chr> 
+    ## 1 4 Avenue 25th St                  40.7             -74.0 R      <NA>   <NA>  
+    ## 2 4 Avenue 25th St                  40.7             -74.0 R      <NA>   <NA>  
+    ## 3 4 Avenue 36th St                  40.7             -74.0 N      R      <NA>  
+    ## 4 4 Avenue 36th St                  40.7             -74.0 N      R      <NA>  
+    ## 5 4 Avenue 36th St                  40.7             -74.0 N      R      <NA>  
+    ## 6 4 Avenue 45th St                  40.6             -74.0 R      <NA>   <NA>  
+    ## # ℹ 12 more variables: route4 <chr>, route5 <chr>, route6 <chr>, route7 <chr>,
+    ## #   route8 <dbl>, route9 <dbl>, route10 <dbl>, route11 <dbl>, entry <chr>,
+    ## #   vending <chr>, entrance_type <chr>, ada <lgl>
