--- a/p8105_hw2_lk2776.md
+++ b/p8105_hw2_lk2776.md
@@ -22,12 +22,16 @@ logical variable (the ifelse or case_match function may be useful).
 nyc_data = read_csv("./data/NYC_Transit_Subway_Entrance_And_Exit_Data.csv", 
                     na=c("NA",".",""), 
                     col_names=TRUE) |>
+  #clean column names
   janitor::clean_names() |> 
+  #select columns 
   select(line,station_name,station_latitude,station_longitude,
          route1,route2,route3,route4,route5,
          route6,route7,route8,route9,route10,route11,
          entry,vending,entrance_type,ada
-         ) 
+         ) |> 
+  #convert entry column from character to logical vector
+  mutate(entry=if_else(entry %in%"YES",TRUE,FALSE))
 ```
 
     ## Rows: 1868 Columns: 32
@@ -41,8 +45,6 @@ nyc_data = read_csv("./data/NYC_Transit_Subway_Entrance_And_Exit_Data.csv",
     ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
 
 ``` r
-  #mutate(entry=if_else(is.na(entry),FALSE,TRUE))
-  
 head(nyc_data)
 ```
 
@@ -56,5 +58,5 @@ head(nyc_data)
     ## 5 4 Avenue 36th St                  40.7             -74.0 N      R      <NA>  
     ## 6 4 Avenue 45th St                  40.6             -74.0 R      <NA>   <NA>  
     ## # ℹ 12 more variables: route4 <chr>, route5 <chr>, route6 <chr>, route7 <chr>,
-    ## #   route8 <dbl>, route9 <dbl>, route10 <dbl>, route11 <dbl>, entry <chr>,
+    ## #   route8 <dbl>, route9 <dbl>, route10 <dbl>, route11 <dbl>, entry <lgl>,
     ## #   vending <chr>, entrance_type <chr>, ada <lgl>
