--- a/p8105_hw2_lk2776.md
+++ b/p8105_hw2_lk2776.md
@@ -12,6 +12,15 @@ options(tibble.print_min=5)
 
 problem1:
 
+The cleaned NYC dataset has 19 columns and 1868 rows. The cleaning
+process involved reading the data with missing value using na(),
+cleaning the column names using janitor::clean_names(), selecting the
+desired columns using select(), and converting entry variable using
+mutate() and ifelse() functions.
+
+The dataset has line, station_name, station_latitude, station_longitude,
+routes1-11, entry, vending, entrance_type, ada variables.
+
 ``` r
 #read data using read_csv() from tidyverse
 nyc_data = read_csv("./data/NYC_Transit_Subway_Entrance_And_Exit_Data.csv", 
@@ -40,10 +49,10 @@ nyc_data = read_csv("./data/NYC_Transit_Subway_Entrance_And_Exit_Data.csv",
     ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
 
 ``` r
-head(nyc_data)
+head(nyc_data,5)
 ```
 
-    ## # A tibble: 6 × 19
+    ## # A tibble: 5 × 19
     ##   line     station_name station_latitude station_longitude route1 route2 route3
     ##   <chr>    <chr>                   <dbl>             <dbl> <chr>  <chr>  <chr> 
     ## 1 4 Avenue 25th St                  40.7             -74.0 R      <NA>   <NA>  
@@ -51,7 +60,29 @@ head(nyc_data)
     ## 3 4 Avenue 36th St                  40.7             -74.0 N      R      <NA>  
     ## 4 4 Avenue 36th St                  40.7             -74.0 N      R      <NA>  
     ## 5 4 Avenue 36th St                  40.7             -74.0 N      R      <NA>  
-    ## 6 4 Avenue 45th St                  40.6             -74.0 R      <NA>   <NA>  
     ## # ℹ 12 more variables: route4 <chr>, route5 <chr>, route6 <chr>, route7 <chr>,
     ## #   route8 <dbl>, route9 <dbl>, route10 <dbl>, route11 <dbl>, entry <lgl>,
     ## #   vending <chr>, entrance_type <chr>, ada <lgl>
+
+``` r
+#check dimensions of dataset
+dim_desc(nyc_data)
+```
+
+    ## [1] "[1,868 x 19]"
+
+``` r
+#check class of columns of dataset
+nyc_data |> sapply(class)
+```
+
+    ##              line      station_name  station_latitude station_longitude 
+    ##       "character"       "character"         "numeric"         "numeric" 
+    ##            route1            route2            route3            route4 
+    ##       "character"       "character"       "character"       "character" 
+    ##            route5            route6            route7            route8 
+    ##       "character"       "character"       "character"         "numeric" 
+    ##            route9           route10           route11             entry 
+    ##         "numeric"         "numeric"         "numeric"         "logical" 
+    ##           vending     entrance_type               ada 
+    ##       "character"       "character"         "logical"
