--- a/p8105_hw2_lk2776.Rmd
+++ b/p8105_hw2_lk2776.Rmd
@@ -13,6 +13,11 @@ options(tibble.print_min=5)
 
 problem1:
 
+The cleaned NYC dataset has 19 columns and 1868 rows. The cleaning process involved reading the data with missing value using na(), cleaning the column names using janitor::clean_names(), selecting the desired columns using select(), and converting entry variable using mutate() and ifelse() functions. 
+
+The dataset has line, station_name, station_latitude, station_longitude, routes1-11, entry, vending, entrance_type, ada variables. 
+
+
 ```{r study data}
 #read data using read_csv() from tidyverse
 nyc_data = read_csv("./data/NYC_Transit_Subway_Entrance_And_Exit_Data.csv", 
@@ -29,6 +34,10 @@ nyc_data = read_csv("./data/NYC_Transit_Subway_Entrance_And_Exit_Data.csv",
   #convert entry column from character to logical vector
   mutate(entry=if_else(entry %in%"YES",TRUE,FALSE))
   
-head(nyc_data)
+head(nyc_data,5)
+#check dimensions of dataset
+dim_desc(nyc_data)
+#check class of columns of dataset
+nyc_data |> sapply(class)
 ```
 
