answering specific questions on the dataset

--- a/p8105_hw2_lk2776.md
+++ b/p8105_hw2_lk2776.md
@@ -12,6 +12,19 @@ options(tibble.print_min=5)
 
 problem1:
 
+Write a short paragraph about this dataset – explain briefly what
+variables the dataset contains, describe your data cleaning steps so
+far, and give the dimension (rows x columns) of the resulting dataset.
+Are these data tidy?
+
+Answer the following questions using these data:
+
+How many distinct stations are there? Note that stations are identified
+both by name and by line (e.g. 125th St 8th Avenue; 125st Broadway;
+125st Lenox); the distinct function may be useful here. How many
+stations are ADA compliant? What proportion of station entrances / exits
+without vending allow entrance?
+
 The cleaned NYC dataset has 19 columns and 1868 rows. The cleaning
 process involved reading the data with missing value using na(),
 cleaning the column names using janitor::clean_names(), selecting the
@@ -30,9 +43,9 @@ nyc_data = read_csv("./data/NYC_Transit_Subway_Entrance_And_Exit_Data.csv",
   janitor::clean_names() |> 
   #select columns 
   select(line,station_name,station_latitude,station_longitude,
+         entry,vending,entrance_type,ada,
          route1,route2,route3,route4,route5,
-         route6,route7,route8,route9,route10,route11,
-         entry,vending,entrance_type,ada
+         route6,route7,route8,route9,route10,route11
          ) |> 
   #convert entry column from character to logical vector
   mutate(entry=if_else(entry %in%"YES",TRUE,FALSE))
@@ -49,20 +62,20 @@ nyc_data = read_csv("./data/NYC_Transit_Subway_Entrance_And_Exit_Data.csv",
     ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
 
 ``` r
-head(nyc_data,5)
+#check class of columns of dataset to verify entry varible class
+nyc_data |> sapply(class)
 ```
 
-    ## # A tibble: 5 × 19
-    ##   line     station_name station_latitude station_longitude route1 route2 route3
-    ##   <chr>    <chr>                   <dbl>             <dbl> <chr>  <chr>  <chr> 
-    ## 1 4 Avenue 25th St                  40.7             -74.0 R      <NA>   <NA>  
-    ## 2 4 Avenue 25th St                  40.7             -74.0 R      <NA>   <NA>  
-    ## 3 4 Avenue 36th St                  40.7             -74.0 N      R      <NA>  
-    ## 4 4 Avenue 36th St                  40.7             -74.0 N      R      <NA>  
-    ## 5 4 Avenue 36th St                  40.7             -74.0 N      R      <NA>  
-    ## # ℹ 12 more variables: route4 <chr>, route5 <chr>, route6 <chr>, route7 <chr>,
-    ## #   route8 <dbl>, route9 <dbl>, route10 <dbl>, route11 <dbl>, entry <lgl>,
-    ## #   vending <chr>, entrance_type <chr>, ada <lgl>
+    ##              line      station_name  station_latitude station_longitude 
+    ##       "character"       "character"         "numeric"         "numeric" 
+    ##             entry           vending     entrance_type               ada 
+    ##         "logical"       "character"       "character"         "logical" 
+    ##            route1            route2            route3            route4 
+    ##       "character"       "character"       "character"       "character" 
+    ##            route5            route6            route7            route8 
+    ##       "character"       "character"       "character"         "numeric" 
+    ##            route9           route10           route11 
+    ##         "numeric"         "numeric"         "numeric"
 
 ``` r
 #check dimensions of dataset
@@ -72,17 +85,25 @@ dim_desc(nyc_data)
     ## [1] "[1,868 x 19]"
 
 ``` r
-#check class of columns of dataset
-nyc_data |> sapply(class)
+#number of distinct line_station_names
+nyc_data |> select(line,station_name)  |>
+  unite("line_station_name", line:station_name) |> 
+ n_distinct() 
 ```
 
-    ##              line      station_name  station_latitude station_longitude 
-    ##       "character"       "character"         "numeric"         "numeric" 
-    ##            route1            route2            route3            route4 
-    ##       "character"       "character"       "character"       "character" 
-    ##            route5            route6            route7            route8 
-    ##       "character"       "character"       "character"         "numeric" 
-    ##            route9           route10           route11             entry 
-    ##         "numeric"         "numeric"         "numeric"         "logical" 
-    ##           vending     entrance_type               ada 
-    ##       "character"       "character"         "logical"
+    ## [1] 465
+
+``` r
+#number of stations that are ada compliant
+table(nyc_data$ada)
+```
+
+    ## 
+    ## FALSE  TRUE 
+    ##  1400   468
+
+``` r
+#proportion of stations with entry but with out vending
+```
+
+filter()
