--- a/p8105_hw2_lk2776.Rmd
+++ b/p8105_hw2_lk2776.Rmd
@@ -13,6 +13,14 @@ options(tibble.print_min=5)
 
 problem1:
 
+Write a short paragraph about this dataset – explain briefly what variables the dataset contains, describe your data cleaning steps so far, and give the dimension (rows x columns) of the resulting dataset. Are these data tidy?
+
+Answer the following questions using these data:
+
+How many distinct stations are there? Note that stations are identified both by name and by line (e.g. 125th St 8th Avenue; 125st Broadway; 125st Lenox); the distinct function may be useful here.
+How many stations are ADA compliant?
+What proportion of station entrances / exits without vending allow entrance?
+
 The cleaned NYC dataset has 19 columns and 1868 rows. The cleaning process involved reading the data with missing value using na(), cleaning the column names using janitor::clean_names(), selecting the desired columns using select(), and converting entry variable using mutate() and ifelse() functions. 
 
 The dataset has line, station_name, station_latitude, station_longitude, routes1-11, entry, vending, entrance_type, ada variables. 
@@ -27,17 +35,36 @@ nyc_data = read_csv("./data/NYC_Transit_Subway_Entrance_And_Exit_Data.csv",
   janitor::clean_names() |> 
   #select columns 
   select(line,station_name,station_latitude,station_longitude,
+         entry,vending,entrance_type,ada,
          route1,route2,route3,route4,route5,
-         route6,route7,route8,route9,route10,route11,
-         entry,vending,entrance_type,ada
+         route6,route7,route8,route9,route10,route11
          ) |> 
   #convert entry column from character to logical vector
   mutate(entry=if_else(entry %in%"YES",TRUE,FALSE))
-  
-head(nyc_data,5)
+
+#check class of columns of dataset to verify entry varible class
+nyc_data |> sapply(class)
+
 #check dimensions of dataset
 dim_desc(nyc_data)
-#check class of columns of dataset
-nyc_data |> sapply(class)
+
 ```
 
+```{r answering specific questions}
+#number of distinct line_station_names
+nyc_data |> select(line,station_name)  |>
+  unite("line_station_name", line:station_name) |> 
+ n_distinct() 
+   
+#number of stations that are ada compliant
+table(nyc_data$ada)
+
+#proportion of stations with entry but with out vending
+
+```
+
+```{r}
+
+```
+
+filter()
