added notes for prob1 solution

--- a/p8105_hw2_lk2776.md
+++ b/p8105_hw2_lk2776.md
@@ -12,27 +12,19 @@ options(tibble.print_min=5)
 
 problem1:
 
-Write a short paragraph about this dataset – explain briefly what
-variables the dataset contains, describe your data cleaning steps so
-far, and give the dimension (rows x columns) of the resulting dataset.
-Are these data tidy?
+The cleaned NYC dataset contains line, station_name, station_latitude,
+station_longitude, routes1-11, entry, vending, entrance_type, ada
+variables. The cleaning process involved reading the data with missing
+value using na(), cleaning the column names using
+janitor::clean_names(), selecting the desired columns using select(),
+and converting entry variable using mutate() and ifelse() functions. The
+resulting dataset has 19 columns and 1868 rows. The data is not tidy
+because routes1-11 can be put together in two columns: route_name and
+route_value.
 
-Answer the following questions using these data:
-
-How many distinct stations are there? Note that stations are identified
-both by name and by line (e.g. 125th St 8th Avenue; 125st Broadway;
-125st Lenox); the distinct function may be useful here. How many
-stations are ADA compliant? What proportion of station entrances / exits
-without vending allow entrance?
-
-The cleaned NYC dataset has 19 columns and 1868 rows. The cleaning
-process involved reading the data with missing value using na(),
-cleaning the column names using janitor::clean_names(), selecting the
-desired columns using select(), and converting entry variable using
-mutate() and ifelse() functions.
-
-The dataset has line, station_name, station_latitude, station_longitude,
-routes1-11, entry, vending, entrance_type, ada variables.
+- 465 distinct stations in the dataset.
+- 468 stations are ada compliant.
+- ~38% of stations with vending allow entrance.
 
 ``` r
 #read data using read_csv() from tidyverse
@@ -104,6 +96,19 @@ table(nyc_data$ada)
 
 ``` r
 #proportion of stations with entry but with out vending
+#table(nyc_data$vending) #183 NO
+nyc_data |> select(entry, vending) |> 
+  filter(vending %in% "NO") |>
+  table()
 ```
 
-filter()
+    ##        vending
+    ## entry    NO
+    ##   FALSE 114
+    ##   TRUE   69
+
+``` r
+69/183
+```
+
+    ## [1] 0.3770492
