--- a/p8105_hw2_lk2776.md
+++ b/p8105_hw2_lk2776.md
@@ -23,14 +23,27 @@ because routes1-11 can be put together in two columns: route_name and
 route_value.
 
 - 465 distinct stations in the dataset.
+
 - 468 stations are ada compliant.
+
 - ~38% of stations with vending allow entrance.
+
+- 91 distinct stations serve the A train after data is reformatted so
+  that route number and name are distinct variables.
+
+- of the 91 distinct stations that serve the A train, only 34 stations
+  are ADA compliant.
 
 ``` r
 #read data using read_csv() from tidyverse
 nyc_data = read_csv("./data/NYC_Transit_Subway_Entrance_And_Exit_Data.csv", 
                     na=c("NA",".",""), 
-                    col_names=TRUE) |>
+                    col_names = TRUE, 
+                    col_types = cols(
+                      Route8=col_character(),
+                      Route9=col_character(), 
+                      Route10=col_character(),
+                      Route11=col_character())) |>
   #clean column names
   janitor::clean_names() |> 
   #select columns 
@@ -41,19 +54,7 @@ nyc_data = read_csv("./data/NYC_Transit_Subway_Entrance_And_Exit_Data.csv",
          ) |> 
   #convert entry column from character to logical vector
   mutate(entry=if_else(entry %in%"YES",TRUE,FALSE))
-```
 
-    ## Rows: 1868 Columns: 32
-    ## ── Column specification ────────────────────────────────────────────────────────
-    ## Delimiter: ","
-    ## chr (22): Division, Line, Station Name, Route1, Route2, Route3, Route4, Rout...
-    ## dbl  (8): Station Latitude, Station Longitude, Route8, Route9, Route10, Rout...
-    ## lgl  (2): ADA, Free Crossover
-    ## 
-    ## ℹ Use `spec()` to retrieve the full column specification for this data.
-    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
-
-``` r
 #check class of columns of dataset to verify entry varible class
 nyc_data |> sapply(class)
 ```
@@ -65,9 +66,9 @@ nyc_data |> sapply(class)
     ##            route1            route2            route3            route4 
     ##       "character"       "character"       "character"       "character" 
     ##            route5            route6            route7            route8 
-    ##       "character"       "character"       "character"         "numeric" 
+    ##       "character"       "character"       "character"       "character" 
     ##            route9           route10           route11 
-    ##         "numeric"         "numeric"         "numeric"
+    ##       "character"       "character"       "character"
 
 ``` r
 #check dimensions of dataset
@@ -112,3 +113,32 @@ nyc_data |> select(entry, vending) |>
 ```
 
     ## [1] 0.3770492
+
+``` r
+#number of distinct stations with route "A"
+nyc_data |> pivot_longer(
+  route1:route11, 
+  names_to="route_number",
+  values_to="route_name"
+) |>
+  filter(route_name == "A") |> 
+  unite("line_station_name", line:station_name) |> 
+  n_distinct()
+```
+
+    ## [1] 91
+
+``` r
+#number of distinct stations with route "A" and ada compliant
+nyc_data |> pivot_longer(
+  route1:route11, 
+  names_to="route_number",
+  values_to="route_name"
+) |>
+  filter(route_name == "A") |> 
+  filter(ada=="TRUE") |> 
+unite("line_station_name", line:station_name) |> 
+  n_distinct()
+```
+
+    ## [1] 34
