--- a/p8105_hw2_lk2776.Rmd
+++ b/p8105_hw2_lk2776.Rmd
@@ -3,7 +3,6 @@ title: "p8105_hw2_lk2776"
 output: github_document
 date: "2024-09-30"
 ---
-## hw2
 
 ```{r setup, warning=FALSE, message=FALSE}
 #load packages; print 3 lines of tibble output
@@ -11,7 +10,7 @@ library(tidyverse)
 options(tibble.print_min=5)
 ```
 
-problem1:
+## problem1:
 
 The cleaned NYC dataset contains line, station_name, station_latitude, station_longitude, routes1-11, entry, vending, entrance_type, ada variables. The cleaning process involved reading the data with missing value using na(), cleaning the column names using janitor::clean_names(), selecting the desired columns using select(), and converting entry variable using mutate() and ifelse() functions. The resulting dataset has 19 columns and 1868 rows. The data is not tidy because routes1-11 can be put together in two columns: route_name and route_value. 
 
@@ -71,7 +70,7 @@ nyc_data |> select(entry, vending) |>
 ```
 
 
-```{r}
+```{r answering more questions}
 #number of distinct stations with route "A"
 nyc_data |> pivot_longer(
   route1:route11, 
@@ -95,4 +94,6 @@ unite("line_station_name", line:station_name) |>
 ```
 
 
+
+## problem 2
 
