--- a/p8105_hw2_lk2776.md
+++ b/p8105_hw2_lk2776.md
@@ -2,15 +2,13 @@ p8105_hw2_lk2776
 ================
 2024-09-30
 
-## hw2
-
 ``` r
 #load packages; print 3 lines of tibble output
 library(tidyverse)
 options(tibble.print_min=5)
 ```
 
-problem1:
+## problem1:
 
 The cleaned NYC dataset contains line, station_name, station_latitude,
 station_longitude, routes1-11, entry, vending, entrance_type, ada
@@ -142,3 +140,5 @@ unite("line_station_name", line:station_name) |>
 ```
 
     ## [1] 34
+
+## problem 2
