--- a/p8105_hw2_lk2776.Rmd
+++ b/p8105_hw2_lk2776.Rmd
@@ -12,7 +12,7 @@ options(tibble.print_min=5)
 
 ## problem1:
 
-The cleaned NYC dataset contains line, station_name, station_latitude, station_longitude, routes1-11, entry, vending, entrance_type, ada variables. The cleaning process involved reading the data with missing value using na(), cleaning the column names using janitor::clean_names(), selecting the desired columns using select(), and converting entry variable using mutate() and ifelse() functions. The resulting dataset has 19 columns and 1868 rows. The data is not tidy because routes1-11 can be put together in two columns: route_name and route_value. 
+The cleaned NYC dataset contains line, station_name, station_latitude, station_longitude, routes1-11, entry, vending, entrance_type, ada variables. The cleaning process involved reading the data with missing value using na(), reading the columns route8-11 as character columns using col_types(), cleaning the column names using janitor::clean_names(), selecting the desired columns using select(), and converting entry variable using mutate() and ifelse() functions. The resulting dataset has 19 columns and 1868 rows. The data is not tidy because routes1-11 can be put together in two columns: route_name and route_value. 
 
 - 465 distinct stations in the dataset. 
 - 468 stations are ada compliant.
@@ -69,7 +69,6 @@ nyc_data |> select(entry, vending) |>
   
 ```
 
-
 ```{r answering more questions}
 #number of distinct stations with route "A"
 nyc_data |> pivot_longer(
@@ -92,7 +91,6 @@ nyc_data |> pivot_longer(
 unite("line_station_name", line:station_name) |> 
   n_distinct()
 ```
-
 
 
 ## problem 2
