--- a/p8105_hw2_lk2776.md
+++ b/p8105_hw2_lk2776.md
@@ -13,7 +13,8 @@ options(tibble.print_min=5)
 The cleaned NYC dataset contains line, station_name, station_latitude,
 station_longitude, routes1-11, entry, vending, entrance_type, ada
 variables. The cleaning process involved reading the data with missing
-value using na(), cleaning the column names using
+value using na(), reading the columns route8-11 as character columns
+using col_types(), cleaning the column names using
 janitor::clean_names(), selecting the desired columns using select(),
 and converting entry variable using mutate() and ifelse() functions. The
 resulting dataset has 19 columns and 1868 rows. The data is not tidy
