read trash wheel data

--- a/p8105_hw2_lk2776.Rmd
+++ b/p8105_hw2_lk2776.Rmd
@@ -7,7 +7,9 @@ date: "2024-09-30"
 ```{r setup, warning=FALSE, message=FALSE}
 #load packages; print 3 lines of tibble output
 library(tidyverse)
+library(readxl)
 options(tibble.print_min=5)
+
 ```
 
 ## problem1:
@@ -92,6 +94,24 @@ unite("line_station_name", line:station_name) |>
   n_distinct()
 ```
 
-
+----------------------------------------------
 ## problem 2
+#[653 x 14]" 
+> dim_desc(mr_trash_wheel)
+[1] "[651 x 14]"
+
+```{r}
+mr_trash_wheel = read_excel("./data/202409_Trash_Wheel_Collection_Data.xlsx",
+                            sheet = 1, col_names=TRUE,na="") |>
+  select(-"...15",-"...16") |>
+  janitor::clean_names() |>
+  drop_na(dumpster)
+  
+dim_desc(mr_trash_wheel)
+
+mr_trash_wheel |> sapply(class)
+#empty_rows = mr_trash_wheel[!complete.cases(mr_trash_wheel),]
+
+#head(mr_trash_wheel)
+```
 
