--- a/p8105_hw2_lk2776.md
+++ b/p8105_hw2_lk2776.md
@@ -5,6 +5,7 @@ p8105_hw2_lk2776
 ``` r
 #load packages; print 3 lines of tibble output
 library(tidyverse)
+library(readxl)
 options(tibble.print_min=5)
 ```
 
@@ -142,4 +143,32 @@ unite("line_station_name", line:station_name) |>
 
     ## [1] 34
 
+------------------------------------------------------------------------
+
 ## problem 2
+
+\#\[653 x 14\]” “\[651 x 14\]”
+
+``` r
+mr_trash_wheel = read_excel("./data/202409_Trash_Wheel_Collection_Data.xlsx",
+                            sheet = 1, col_names=TRUE,na="") |>
+  select(-"...15",-"...16") |>
+  janitor::clean_names() |>
+  drop_na(dumpster) |> 
+  mutate(sports_balls = as.integer(round(sports_balls),digits=0))
+```
+
+    ## New names:
+    ## • `` -> `...15`
+    ## • `` -> `...16`
+
+``` r
+dim_desc(mr_trash_wheel)
+```
+
+    ## [1] "[651 x 14]"
+
+``` r
+#check class of columns
+#mr_trash_wheel |> sapply(class)
+```
