all code added for prob2

--- a/p8105_hw2_lk2776.md
+++ b/p8105_hw2_lk2776.md
@@ -147,15 +147,24 @@ unite("line_station_name", line:station_name) |>
 
 ## problem 2
 
-\#\[653 x 14\]” “\[651 x 14\]”
+\#\[653 x 14\]” “\[651 x 15\]” \[119 x 14\]” “\[263 x 13\]”, 652, 770
+“\[1,033 x 15\]” 246.74 205410
 
 ``` r
-mr_trash_wheel = read_excel("./data/202409_Trash_Wheel_Collection_Data.xlsx",
-                            sheet = 1, col_names=TRUE,na="") |>
+#read mr_trash_wheel data
+mr_trash_wheel = readxl::read_excel("./data/202409_Trash_Wheel_Collection_Data.xlsx",
+                            sheet = "Mr. Trash Wheel", 
+                            col_names=TRUE,na="") |>
+  #remove empty columns 
   select(-"...15",-"...16") |>
+  #clean names
   janitor::clean_names() |>
+  #drop rows with empty dumpster values
   drop_na(dumpster) |> 
-  mutate(sports_balls = as.integer(round(sports_balls),digits=0))
+  #convert sports balls to integer and round it off
+  mutate(sports_balls = as.integer(round(sports_balls),digits=0)) |>
+  #create a new variable
+  mutate(wheel_name = "mr_trash_wheel")
 ```
 
     ## New names:
@@ -163,12 +172,72 @@ mr_trash_wheel = read_excel("./data/202409_Trash_Wheel_Collection_Data.xlsx",
     ## • `` -> `...16`
 
 ``` r
+#read professor trash wheel data
+prof_trash_wheel = readxl::read_excel("./data/202409_Trash_Wheel_Collection_Data.xlsx",
+                            sheet = "Professor Trash Wheel", col_names=TRUE,na="") |>
+  #clean names
+  janitor::clean_names() |>
+  #drop rows with empty dumpster values
+  drop_na(dumpster) |> 
+  #convert year to character for bindin purposes
+  mutate(year=as.character(year)) |> 
+  #create new variable
+  mutate(wheel_name = "prof_trash_wheel")
+
+#read gwynnda data 
+g_trash_wheel = readxl::read_excel("./data/202409_Trash_Wheel_Collection_Data.xlsx",
+                            sheet = "Gwynnda Trash Wheel", col_names=TRUE,na="") |>
+  #clean names 
+  janitor::clean_names() |>
+  #drop rows with empty dumpster values 
+  drop_na(dumpster) |>
+  #convert year to character for bindin purposes
+  mutate(year=as.character(year)) |> 
+  #create new variable
+  mutate(wheel_name = "g_trash_wheel")
+
+#combine tables 
+trash_wheel_tidy = 
+  bind_rows(mr_trash_wheel, prof_trash_wheel, g_trash_wheel) 
+
+#get dimensions of tables 
 dim_desc(mr_trash_wheel)
 ```
 
-    ## [1] "[651 x 14]"
+    ## [1] "[651 x 15]"
 
 ``` r
-#check class of columns
-#mr_trash_wheel |> sapply(class)
+dim_desc(prof_trash_wheel)
 ```
+
+    ## [1] "[119 x 14]"
+
+``` r
+dim_desc(g_trash_wheel)
+```
+
+    ## [1] "[263 x 13]"
+
+``` r
+dim(trash_wheel_tidy)
+```
+
+    ## [1] 1033   15
+
+``` r
+#total trash collected by pro_trash_wheel
+sum(prof_trash_wheel$weight_tons,na.rm=TRUE)
+```
+
+    ## [1] 246.74
+
+``` r
+#number of cigarette butts collected by g_trash_wheel in 2022
+g_trash_wheel |>  filter(year%in%"2022")  |>
+  summarize(sum_cig_butts = sum(cigarette_butts, na.rm=TRUE))
+```
+
+    ## # A tibble: 1 × 1
+    ##   sum_cig_butts
+    ##           <dbl>
+    ## 1        205410
