--- a/p8105_hw2_lk2776.md
+++ b/p8105_hw2_lk2776.md
@@ -147,8 +147,17 @@ unite("line_station_name", line:station_name) |>
 
 ## problem 2
 
-\#\[653 x 14\]” “\[651 x 15\]” \[119 x 14\]” “\[263 x 13\]”, 652, 770
-“\[1,033 x 15\]” 246.74 205410
+Mr. trash wheel data has 651 rows and 15 columns. Professor trash wheel
+data has 119 rows and 14 columns. Gwynnda trash wheel data has 263 rows
+and 13 columns.
+
+The combined data has 1033 rows and 15 columns.
+
+The weight in tons of trash collected by professor trash wheel is
+246.74.
+
+The number of cigarette butts collected by Gwynnda trash wheel in 2022
+is 205410.
 
 ``` r
 #read mr_trash_wheel data
@@ -241,3 +250,5 @@ g_trash_wheel |>  filter(year%in%"2022")  |>
     ##   sum_cig_butts
     ##           <dbl>
     ## 1        205410
+
+Problem3:
