--- a/prob3.Rmd
+++ b/prob3.Rmd
@@ -23,7 +23,7 @@ bakers_bakes_df =
 #test
 test <- anti_join(bakers_data, bakes_data, by = c("baker", "series"))
 test2 <- anti_join(bakes_data, bakers_data, by = c("baker", "series"))
-write_csv(bakers_bakes_df,file="./output/bakers_bakes_df.csv")
+write_csv(bakers_bakes_df,file="./data/bakers_bakes_df.csv")
 ```
 
 
@@ -38,7 +38,7 @@ full_join(bakers_bakes_df, results_data, by=c("baker","series","episode"))
 
 test3 <- anti_join(bakers_bakes_df, results_data, by = c("baker","series","episode"))
 test4 <- anti_join(results_data, bakers_bakes_df,by = c("baker","series","episode"))
-write_csv(bakers_bakes_results_df,file="./output/bakers_bakes_results_df.csv")
+write_csv(bakers_bakes_results_df,file="./data/bakers_bakes_results_df.csv")
 
 ```
 
